--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,30 @@
-name: Deploy to Firebase Hosting on merge
-'on':
+name: Deploy to Firebase Hosting
+
+on:
   push:
     branches:
       - main
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - run: npm ci
-      - run: npm run build 
-      - run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Deploy to Firebase
+        run: |
+          npm install -g firebase-tools
+          firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
